Modify implementations to trigger code coverage calculation