@@ -18,9 +18,7 @@ package org.sonar.go.checks;
 
 import java.util.ArrayList;
 import java.util.Deque;
-import java.util.Iterator;
 import java.util.LinkedList;
-import java.util.List;
 import javax.annotation.Nullable;
 import org.sonar.check.Rule;
 import org.sonar.check.RuleProperty;
@@ -60,12 +58,12 @@ public class TooDeeplyNestedStatementsCheck implements SlangCheck {
       return;
     }
 
-    Iterator<Tree> iterator = ctx.ancestors().iterator();
-    Deque<Token> nestedParentNodes = new LinkedList<>();
-    Tree last = tree;
+    var iterator = ctx.ancestors().iterator();
+    var nestedParentNodes = new LinkedList<Token>();
+    var last = tree;
 
     while (iterator.hasNext()) {
-      Tree parent = iterator.next();
+      var parent = iterator.next();
       if (isElseIfStatement(parent, last) && !nestedParentNodes.isEmpty()) {
         // Only the 'if' parent of the chained 'else-if' statements should be highlighted
         nestedParentNodes.removeLast();
@@ -89,17 +87,17 @@ public class TooDeeplyNestedStatementsCheck implements SlangCheck {
   }
 
   private void reportIssue(CheckContext ctx, Tree statement, Deque<Token> nestedStatements) {
-    String message = String.format("Refactor this code to not nest more than %s control flow statements.", max);
-    List<SecondaryLocation> secondaryLocations = new ArrayList<>(nestedStatements.size());
+    var message = "Refactor this code to not nest more than %s control flow statements.".formatted(max);
+    var secondaryLocations = new ArrayList<SecondaryLocation>(nestedStatements.size());
     int nestedDepth = 0;
 
     while (!nestedStatements.isEmpty()) {
       nestedDepth++;
-      String secondaryLocationMessage = String.format("Nesting depth %s", nestedDepth);
+      var secondaryLocationMessage = String.format("Nesting depth %s", nestedDepth);
       secondaryLocations.add(new SecondaryLocation(nestedStatements.removeLast().textRange(), secondaryLocationMessage));
     }
 
-    Token nodeToHighlight = getNodeToHighlight(statement);
+    var nodeToHighlight = getNodeToHighlight(statement);
     ctx.reportIssue(nodeToHighlight, message, secondaryLocations);
   }
 
